--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </p>
         
         <div class="image-placeholder">
-            <img src="/Imagenes Kri/Segua 2.png" alt="Segua" style="max-width: 500px; height: auto;">
+            <img src="/Imagenes Kri/Segua 2.png" alt="Segua">
         </div>
 
         <p>
@@ -114,7 +114,7 @@
         </p>
 
         <div class="image-placeholder">
-            <img src="/Imagenes Kri/IMG_segua pintura.png" alt="Segua" style="max-width: 600px; height: auto;">
+            <img src="/Imagenes Kri/IMG_segua pintura.png">
         </div>
         <h2>Referencias</h2>
         <ul style="list-style: none; padding: 0;">
