--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: 'Roman SD';
-            src: url('Imagenes Kri/Roman SD.ttf') format('truetype');
+            src: url('Imagenes Kri/Roman SD.ttf') format('truetype'); 
             font-weight: normal;
             font-style: normal;
         }
@@ -72,7 +72,7 @@
             background: none;
         }
         .image-placeholder img {
-            max-width: 400px; 
+            max-width: 500px; 
             height: auto; 
         }
         footer {
@@ -114,7 +114,7 @@
         </p>
 
         <div class="image-placeholder">
-            <img src="/Imagenes Kri/IMG_segua pintura.png">
+            <img src="/Imagenes Kri/IMG_segua pintura.png" alt="Segua" style="max-width: 700px; height: auto;">
         </div>
         <h2>Referencias</h2>
         <ul style="list-style: none; padding: 0;">
