--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </p>
         
         <div class="image-placeholder">
-            <img src="/Imagenes Kri/imagen1.png" alt="Segua">
+            <img src="Imagenes Kri/imagen1.png" alt="Segua">
         </div>
 
         <p>
@@ -114,7 +114,7 @@
         </p>
 
         <div class="image-placeholder">
-            <img src="/Imagenes Kri/pintura1.png" alt="Segua" style="max-width: 700px; height: auto;">
+            <img src="Imagenes Kri/pintura1.png" alt="Segua" style="max-width: 700px; height: auto;">
         </div>
         <h2>Referencias</h2>
         <ul style="list-style: none; padding: 0;">
